--- a/main.css
+++ b/main.css
@@ -57,7 +57,7 @@ p { margin: auto; width: 900px;
 
 }
 
-#copyright {color: red; text-align: center 900px;
+#copyright {color: red; text-align: left; margin-left: auto;
 
 }
 
