--- a/main.css
+++ b/main.css
@@ -29,7 +29,7 @@ h3 {
 	font-size: 1.5em;
 }
 
-p { margin: auto; width: 900px;
+p { margin: auto; width: 900px; text-align: left;
 
 }
 
@@ -57,7 +57,7 @@ p { margin: auto; width: 900px;
 
 }
 
-#copyright {color: red; text-align: left; margin-left: auto;
+#copyright {color: red;
 
 }
 
